--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.6",
     "@heroicons/react": "^2.1.3",
+    "@react-pdf/renderer": "^4.1.5",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
     "next": "^14.2.3",
