--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "novak-demo",
+  "name": "novak",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 8080",
     "lint": "next lint"
   },
   "dependencies": {
