--- a/.github/workflows/main_novakapp.yml
+++ b/.github/workflows/main_novakapp.yml
@@ -28,11 +28,22 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          pwd
+          echo "Listando diretórios:"
+          ls -la
+          echo "Verificando componentes:"
+          ls -la src/components/
           npm ci
           npm run build
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* .next -r
+          echo "Conteúdo antes do zip:"
+          ls -la
+          echo "Conteúdo de src/components:"
+          ls -la src/components/
+          zip release.zip ./* .next -r
+          echo "Verificando zip:"
+          ls -lh release.zip
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -56,7 +67,12 @@ jobs:
           name: node-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
+        run: | 
+          unzip release.zip
+          echo "Conteúdo após unzip:"
+          ls -la
+          echo "Verificando components:"
+          ls -la src/components/
       
       - name: Login to Azure
         uses: azure/login@v2
