--- a/.github/workflows/main_novakapp.yml
+++ b/.github/workflows/main_novakapp.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - novakapp
 
 on:
@@ -26,17 +23,21 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
 
-      - name: npm install, build, and test
+      - name: Debug directories
         run: |
           pwd
           echo "Listando diretórios:"
           ls -la
           echo "Verificando componentes:"
           ls -la src/components/
+
+      - name: npm install and build
+        run: |
           npm ci
           npm run build
 
-      - name: Zip artifact for deployment
+      - name: Prepare zip
+        run: |
           echo "Conteúdo antes do zip:"
           ls -la
           echo "Conteúdo de src/components:"
@@ -58,7 +59,7 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write
 
     steps:
       - name: Download artifact from build job
@@ -66,8 +67,8 @@ jobs:
         with:
           name: node-app
 
-      - name: Unzip artifact for deployment
-        run: | 
+      - name: Debug deployment files
+        run: |
           unzip release.zip
           echo "Conteúdo após unzip:"
           ls -la
@@ -88,4 +89,3 @@ jobs:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           slot-name: 'Production'
           package: .
-          
