--- a/web.config
+++ b/web.config
@@ -3,18 +3,16 @@
   <system.webServer>
     <webSocket enabled="false" />
     <handlers>
-      <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
+      <add name="iisnode" path=".next/standalone/server.js" verb="*" modules="iisnode" />
     </handlers>
     <rewrite>
       <rules>
-        <rule name="StaticContent">
-          <action type="Rewrite" url="public{REQUEST_URI}" />
-        </rule>
-        <rule name="DynamicContent">
-          <conditions>
+        <rule name="NextJS" stopProcessing="true">
+          <match url="(.*)" />
+          <conditions logicalGrouping="MatchAll">
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True" />
           </conditions>
-          <action type="Rewrite" url="server.js" />
+          <action type="Rewrite" url=".next/standalone/server.js" />
         </rule>
       </rules>
     </rewrite>
