--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 8080 -H 0.0.0.0",
+    "start": "./node_modules/next/dist/bin/next start -p 8080",
     "lint": "next lint"
   },
   "dependencies": {
