--- a/.github/workflows/main_novakapp.yml
+++ b/.github/workflows/main_novakapp.yml
@@ -39,9 +39,10 @@ jobs:
         run: |
           echo "Creating production package..."
           mkdir -p production
-          cp -r .next production/
-          cp -r public production/
-          cp -r node_modules production/  # Importante: incluir node_modules
+          cp -r src production/src
+          cp -r .next production/.next
+          cp -r public production/public
+          cp -r node_modules production/node_modules
           cp package.json production/
           cp package-lock.json production/
           cp next.config.mjs production/
@@ -98,3 +99,4 @@ jobs:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           slot-name: 'Production'
           package: output
+          deployment-root-directory: src
