--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p ${PORT:-3000}",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,7 +14,7 @@
     "@react-pdf/renderer": "^4.1.5",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
-    "next": "^15.1.1",
+    "next": "^14.2.18",
     "react": "^18",
     "react-dom": "^18"
   },
