--- a/package.json
+++ b/package.json
@@ -14,20 +14,22 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-pdf/renderer": "^4.1.5",
+    "@types/pdfjs-dist": "2.10.378",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
     "next": "^14.2.18",
     "next-auth": "^4.24.7",
+    "pdfjs-dist": "3.11.174",
+    "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "shadcn-ui": "^0.2.3",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss": "^3.4.4",
-    "postcss": "^8",
-    "autoprefixer": "^10.4.19"
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
