--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "framer-motion": "^11.2.6",
     "next": "^14.2.18",
     "next-auth": "^4.24.7",
-    "pdfjs-dist": "3.11.174",
+    "pdfjs-dist": "^4.9.155",
     "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "shadcn-ui": "^0.2.3",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
