--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "downlevelIteration": true,
     "plugins": [
       {
         "name": "next"
