--- a/.github/workflows/main_novakapp.yml
+++ b/.github/workflows/main_novakapp.yml
@@ -16,16 +16,26 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: npm install and build
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm ci
+          npm run build
+        env:
+          NODE_ENV: production
+
+      - name: Prepare production artifacts
+        run: |
+          cp package*.json .next/
+          cd .next
+          npm ci --only=production
+          rm -rf node_modules/.cache
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd .next
+          zip -r ../release.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
