--- a/.github/workflows/main_novakapp.yml
+++ b/.github/workflows/main_novakapp.yml
@@ -18,24 +18,14 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install and build
+      - name: npm install, build, and test
         run: |
-          npm ci
-          npm run build
-        env:
-          NODE_ENV: production
-
-      - name: Prepare production artifacts
-        run: |
-          cp package*.json .next/
-          cd .next
-          npm ci --only=production
-          rm -rf node_modules/.cache
+          npm install
+          npm run build --if-present
+          npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: |
-          cd .next
-          zip -r ../release.zip ./*
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
