--- a/.github/workflows/main_novakapp.yml
+++ b/.github/workflows/main_novakapp.yml
@@ -20,9 +20,9 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          rm -rf node_modules/.cache
+          npm ci
+          npm run build
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
