--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "./node_modules/.bin/next start",
+    "start": "next start -p $PORT",
     "lint": "next lint"
   },
   "dependencies": {
