--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p $PORT",
+    "start": "next start",
     "lint": "next lint",
     "analyze": "cross-env ANALYZE=true next build",
     "type-check": "tsc --noEmit"
@@ -15,6 +15,10 @@
     "@heroicons/react": "^2.1.3",
     "@react-pdf/renderer": "^4.1.5",
     "autoprefixer": "^10.4.20",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
     "next": "^14.2.22",
@@ -22,13 +26,24 @@
     "postcss": "^8.4.49",
     "react": "^18",
     "react-dom": "^18",
-    "tailwindcss": "^3.4.17"
+    "react-hot-toast": "^2.4.1",
+    "shadcn-ui": "^0.2.3",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
-    "@types/node": "22.10.5",
+    "@shadcn/ui": "^0.0.4",
+    "@types/axios": "^0.9.36",
+    "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "prettier": "^3.3.2",
+    "prettier-plugin-organize-imports": "^4.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
 }
