--- a/package.json
+++ b/package.json
@@ -11,25 +11,27 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@auth/core": "^0.34.2",
     "@headlessui/react": "^2.1.6",
     "@heroicons/react": "^2.1.3",
-    "@react-pdf/renderer": "^4.1.5",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-pdf/renderer": "^4.1.5",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
     "next": "^14.2.22",
+    "next-auth": "^4.24.11",
     "pdf-parse": "^1.1.1",
+    "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "shadcn-ui": "^0.2.3",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss": "^3.4.4",
-    "postcss": "^8",
-    "autoprefixer": "^10.4.19"
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
