--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-pdf/renderer": "^4.1.5",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
     "@types/axios": "^0.9.36",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -44,6 +46,7 @@
     "prettier": "^3.3.2",
     "prettier-plugin-organize-imports": "^4.0.0",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
